--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Contact management system is used to manage address book",
   "main": "app.js",
   "scripts": {
-    "start" : "node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +21,20 @@
   "bugs": {
     "url": "https://github.com/karthickapps/cms/issues"
   },
-  "homepage": "https://github.com/karthickapps/cms#readme"
+  "homepage": "https://github.com/karthickapps/cms#readme",
+  "dependencies": {
+    "body-parser": "^1.15.1",
+    "cookie-parser": "^1.4.1",
+    "ejs": "^2.4.1",
+    "express": "^4.13.4",
+    "express-flash": "0.0.2",
+    "express-session": "^1.13.0",
+    "mongoose": "^4.4.16",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
+    "path": "^0.12.7",
+    "serve-favicon": "^2.3.0"
+  }
 }
